--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-apps=friendsList">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
+<body ng-controller="mainCtrl">
 	<p>Woo</p>
-	
+	<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js">
+	</script>
+	<script src = "js/app.js"></script>
 </body>
 </html>
